k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bhrigu-guest
spec:
  selector:
    app: bhrigu-guest
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: bhrigu-pro
spec:
  selector:
    app: bhrigu-pro
  ports:
  - port: 5001
    targetPort: 5001
    name: http
  type: ClusterIP
