k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bhrigu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bhrigu.local  # You can add this to your /etc/hosts pointing to the Minikube IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bhrigu-guest-service
                port:
                  number: 80
